Revise view names

--- a/index.html
+++ b/index.html
@@ -194,16 +194,16 @@
 			<fieldset>
 				<legend>Render</legend>
 				<select id="view">
-						<option class="ms" value="STUD_ABOV">Above rear</option>
-						<option value="STUD_3QTR">Front</option>
-						<option class="ms mx" value="STUD_REAR">Rear</option>
-						<option selected="selected" value="STUD_SIDE">Side</option>
-						<option class="ms mx" value="STUD_SEAT_ABOVE">Above seating</option>
-						<option class="ms-2012" value="STUD_SEAT_DRIVER">Driver seat</option>
+						<option class="ms" value="STUD_ABOV">Rear above</option>
+						<option value="STUD_3QTR">Front angled</option>
+						<option class="ms mx" value="STUD_REAR">Rear angled</option>
+						<option selected="selected" value="STUD_SIDE">Side profile</option>
+						<option class="ms mx" value="STUD_SEAT_ABOVE">Seating above</option>
+						<option class="ms-2012" value="STUD_SEAT_DRIVER">Drivers seat</option>
 						<option class="ms-2012" value="STUD_SEAT_3QTR">Passenger seat</option>
-						<option class="ms" value="STUD_SEAT_ALTA">Angled seating</option>
+						<option class="ms" value="STUD_SEAT_ALTA">Seating angled</option>
 						<option class="ms-2012" value="OUT1_3QTR">Outside 3D</option>
-						<option class="ms-2012 mx m3" value="STUD_SEAT">Seating</option>
+						<option class="ms-2012 mx m3" value="STUD_SEAT">Seating side</option>
 					</optgroup>
 				</select>
 				<select class="m3" id="background-m3">
