Add Model 3 wheels

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<select id="model">
 					<option value="m3">3</option>
 					<option value="ms-2012">S (2012)</option>
-					<option selected="selected" value="ms-2016">S (2016)</option>
+					<option value="ms-2016">S (2016)</option>
 					<option value="mx">X</option>
 				</select>
 			</fieldset>
@@ -83,8 +83,10 @@
 						</optgroup>
 					</select>
 				</label>
-				<label class="ms mx">Wheels
+				<label>Wheels
 					<select id="wheels">
+						<option class="m3" value="W38B">18″ Aero</option>
+						<option class="m3" value="W39B">19″ Sport</option>
 						<optgroup class="ms" label="19″">
 							<option class="ms-2012" value="WT19">Silver Split 5-Spoke</option>
 							<option class="ms-2012" value="WTAE">Silver Aero</option>
