Do not default to transparent on 3

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</select>
 				<select class="m3" id="background-m3">
 					<option value="0">Studio</option>
-					<option selected="selected" value="1">Transparent</option>
+					<option value="1">Transparent</option>
 				</select>
 				<select class="ms mx" id="background">
 					<option value="0">Showroom</option>
