Add Model 3 wheels close-up

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 						<option value="STUD_3QTR">Front angled</option>
 						<option class="ms mx" value="STUD_REAR">Rear angled</option>
 						<option selected="selected" value="STUD_SIDE">Side profile</option>
+						<option class="m3" value="STUD_WHEEL">Wheels close-up</option>
 						<option class="ms mx" value="STUD_SEAT_ABOVE">Seating above</option>
 						<option class="ms-2012" value="STUD_SEAT_DRIVER">Drivers seat</option>
 						<option class="ms-2012" value="STUD_SEAT_3QTR">Passenger seat</option>
