Textile headliner is MS 2012 only

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				</label>
 				<label class="ms mx">Headliner
 					<select id="headliner">
-						<option class="ms" value="UTMF">Textile</option>
+						<option class="ms-2012" value="UTMF">Textile</option>
 						<option class="mx" value="UTPB">Black Plastic</option>
 						<option value="UTAB">Black Alcantara</option>
 						<option value="UTAW">White Alcantara</option>
