Remove redundant secondary m3 silver.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 						<optgroup label="Metallic">
 							<option class="m3" value="PPSB">Deep Blue</option>
 							<option class="m3" value="PMNG">Midnight Silver</option>
-							<option class="m3" value="PMLS">Silver (SS?)</option>
-							<option class="m3" value="PMSS">Silver (LS?)</option>
+							<option class="m3" value="PMSS">Starlight Silver</option>
 							<option class="ms mx" value="COL2-PPSB">Deep Blue</option>
 							<option class="ms mx" value="COL2-PMBL">Obsidian Black</option>
 							<option class="ms mx" value="COL2-PMNG">Midnight Silver</option>
