Add shadows and charge port.

--- a/android.html
+++ b/android.html
@@ -57,6 +57,7 @@
 		<section id="visual">
 			<section class="m3">
 				<section class="front angle layered">
+					<img class="shadow" src="android/generated_images_static_model_3_m3herofrontshadow.png" />
 					<img class="body" src="android/generated_images_colorized_model_3_m3herofrontbody.png" />
 					<div class="wheels">
 						<img class="aero" src="android/generated_images_static_model_3_m3herofrontwheelspinwheel18.png" />
@@ -80,6 +81,7 @@
 					</div>
 				</section>
 				<section class="rear angle layered">
+					<img class="shadow" src="android/generated_images_static_model_3_m3heroreverseshadow.png" />
 					<img class="body" src="android/generated_images_colorized_model_3_m3heroreversebody.png" />
 					<div class="wheels">
 						<img class="aero" src="android/generated_images_static_model_3_m3heroreversewheelspinwheel18.png" />
@@ -96,6 +98,10 @@
 					<div class="hood">
 						<img src="android/generated_images_colorized_model_3_m3heroreversehoodclosed.png" class="closed" />
 						<img src="android/generated_images_colorized_model_3_m3heroreversehoodopen.png" class="open" />
+					</div>
+					<div class="chargeport">
+						<img src="android/generated_images_static_model_3_m3heroreversechargeportclosed.png" class="closed" />
+						<img src="android/generated_images_static_model_3_m3heroreversechargeportopen.png" class="open" />
 					</div>
 					<div class="trunk">
 						<img src="android/generated_images_colorized_model_3_m3heroreversetrunkclosed.png" class="closed" />
