Performance leather not on S 2016. Premium leather is MX only. Disable hidden options to avoid keyboard nav activating it.

--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
 							<option value="QLET">Tan</option>
 							<option value="QLEW">White</option>
 						</optgroup>
-						<optgroup class="mx ms" label="Premium Leather">
+						<optgroup class="mx" label="Premium Leather">
 							<option value="QLPB">Black</option>
 							<option value="QLPC">Cream</option>
 							<option value="QLPT">Tan</option>
 							<option value="QLPW">Ultra White</option>
 						</optgroup>
-						<optgroup class="ms" label="Performance Leather">
+						<optgroup class="ms-2012" label="Performance Leather">
 							<option value="IZMB">Black</option>
 							<option value="IZMG">Gray</option>
 							<option value="IZMT">Tan</option>
