Spoiler works on model x

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						<option value="BC0R">Red</option>
 					</select>
 				</label>
-				<label id="spoiler" class="ms"><input id="rearspoiler" type="checkbox"/>Rear Spoiler</label>
+				<label id="spoiler" class="ms mx"><input id="rearspoiler" type="checkbox"/>Rear Spoiler</label>
 			</fieldset>
 			<fieldset class="ms mx">
 				<legend>Interior</legend>
