Add Roadster sport option

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Tesla Preview</title>
-		<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:400,700" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:400,700" rel="stylesheet">
 		<link href="styles/main.css" rel="stylesheet" >
 	</head>
 	<body>
@@ -152,6 +152,7 @@
 				</label>
 				<label class="ms mx"><input id="rearspoiler" type="checkbox"/>Rear Spoiler</label>
 				<label class="rd"><input id="carbonkit" type="checkbox"/>Carbon Fiber Kit</label>
+				<label class="rd"><input id="sport" type="checkbox"/>Sport</label>
 			</fieldset>
 			<fieldset class="ms mx rd">
 				<legend>Interior</legend>
