Add option to flip image

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 					<option value="2">White</option>
 					<option value="3">Gray</option>
 				</select>
+				<label><input id="flip" type="checkbox"/>Flip</label>
 			</fieldset>
 			<fieldset>
 				<legend>Exterior</legend>
