Add Roadster Infotainment, make checkbox code generic

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 						<option value="BC0R">Red</option>
 					</select>
 				</label>
-				<label class="ms mx"><input id="rearspoiler" type="checkbox"/>Rear Spoiler</label>
-				<label class="rd"><input id="carbonkit" type="checkbox"/>Carbon Fiber Kit</label>
-				<label class="rd"><input id="sport" type="checkbox"/>Sport</label>
+				<label class="ms mx"><input id="X019" type="checkbox"/>Rear Spoiler</label>
+				<label class="rd"><input id="EXT1" type="checkbox"/>Carbon Fiber Kit</label>
+				<label class="rd"><input id="RS1" type="checkbox"/>Sport</label>
 			</fieldset>
 			<fieldset class="ms mx rd">
 				<legend>Interior</legend>
@@ -193,6 +193,7 @@
 						<option value="YL">Yellow</option>
 					</select>
 				</label>
+				<label class="rd"><input id="ELT1" type="checkbox"/>Infotainment</label>
 				<label class="ms mx">Seats
 					<select id="seats">
 						<optgroup class="ms mx" label="Textile">
