Latest 2016 model s seating requires FR04 to avoid clipping

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					<select id="seats">
 						<optgroup class="ms mx" label="Textile">
 							<option class="ms-2012" value="IBMB">Black</option>
-							<option class="ms-2016" value="QTTB">Black</option>
+							<option class="ms-2016" value="QTTB,FR04">Black</option>
 							<option class="mx" value="QPBT">Black Multi-Pattern</option>
 						</optgroup>
 						<optgroup class="ms-2012" label="Leather">
@@ -221,9 +221,9 @@
 							<option value="QPMT,SR02">Tan</option>
 						</optgroup>
 						<optgroup class="ms-2016" label="Premium Leather">
-							<option value="QTPP">Black</option>
-							<option value="QTPC">Cream</option>
-							<option value="QTPW">White</option>
+							<option value="QTPP,FR04">Black</option>
+							<option value="QTPC,FR04">Cream</option>
+							<option value="QTPW,FR04">White</option>
 						</optgroup>
 						<optgroup class="mx" label="Leather Ventilated">
 							<option value="QLEB">Black</option>
