Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 						<option class="mx" value="UTPB">Black Plastic</option>
 						<option value="UTAB">Black Alcantara</option>
 						<option value="UTAW">White Alcantara</option>
-						<option class="ms" value="">White Alcantara (+Black)</option>
+						<option class="ms-2012" value="">White Alcantara (+Black)</option>
 					</select>
 				</label>
 				<label class="ms mx">Decor
@@ -284,5 +284,12 @@
 			<img id="single" class="checkerboard" />
 		</section>
 		<script src="scripts/main.js"></script>
+		<script async src="//www.googletagmanager.com/gtag/js?id=UA-319000-12"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-319000-12');
+		</script>
 	</body>
 </html>
