Preserve car state in URLs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<header class="container">
 			</header>
 		</main>
-		<form id="options">
+		<form id="options" method="get">
 			<fieldset>
 				<legend>Model</legend>
 				<select id="model">
