--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 			<img id="single" class="checkerboard" />
 		</section>
 		<script src="scripts/main.js"></script>
-		<script async src="//www.googletagmanager.com/gtag/js?id=UA-319000-12"></script>
+		<script async src="//www.google-analytics.com/analytics.js"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
