Add Gray Twin Turbine

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 						<optgroup class="ms" label="21″">
 							<option value="WT21">Silver Turbine</option>
 							<option value="WTSG">Gray Turbine</option>
+							<option value="WTTC">Gray Twin Turbine</option>
 						</optgroup>
 						<optgroup class="mx" label="22″">
 							<option value="WT22">Silver Turbine</option>
