Add signature perforated leather

--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
 							<option value="IPMT">Tan</option>
 						</optgroup>
 						<optgroup class="ms-2012" label="Signature Leather">
+							<option value="ISMB">Black Perforated</option>
+							<option value="ISMT">Tan Perforated</option>
 							<option value="ISZW">White Perforated</option>
 						</optgroup>
 						<optgroup class="ms mx" label="Leather">
