New seat and dash for S.

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
 							<option value="QTPP,FR04">Black</option>
 							<option value="QTPC,FR04">Cream</option>
 							<option value="QTPW,FR04">White</option>
+							<option value="QTBW,FR04">White/black</option>
 						</optgroup>
 						<optgroup class="mx" label="Leather Ventilated">
 							<option value="QLEB">Black</option>
@@ -271,6 +272,12 @@
 						<option class="ms" value="IDPB">Piano Black</option>
 						<option class="ms" value="IDBA">Dark Ash Wood</option>
 						<option class="ms-2016 mx" value="IDBO">Figured Ash Wood</option>
+					</select>
+				</label>
+				<label class="ms">Dash
+					<select id="dash">
+						<option value="DSH5">Matte</option>
+						<option value="DSH7">Gloss</option>
 					</select>
 				</label>
 				<label class="ms-2012">Console
