Dash option is also for X.

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 						<option class="ms-2016 mx" value="IDBO">Figured Ash Wood</option>
 					</select>
 				</label>
-				<label class="ms">Dash
+				<label class="ms mx">Dash
 					<select id="dash">
 						<option value="DSH5">Matte</option>
 						<option value="DSH7">Gloss</option>
