Add S ventilated seats, oak decor

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 						<option value="QPMT">Tan</option>
 						<option class="mx" value="QPMW">White</option>
 					</optgroup>
-					<optgroup class="ms" label="Leather Executive">
+					<optgroup class="ms" label="Executive Leather">
 						<option value="QPMB,SR02">Black</option>
 						<option value="QPMG,SR02">Gray</option>
 						<option value="QPMT,SR02">Tan</option>
@@ -236,16 +236,20 @@
 						<option value="QTPW,FR04">White</option>
 						<option value="QTBW,FR04">White/black</option>
 					</optgroup>
-					<optgroup class="mx" label="Leather Ventilated">
-						<option value="QLEB">Black</option>
-						<option value="QLET">Tan</option>
-						<option value="QLEW">White</option>
-					</optgroup>
 					<optgroup class="mx" label="Premium Leather">
 						<option value="QLPB">Black</option>
 						<option value="QLPC">Cream</option>
 						<option value="QLPT">Tan</option>
 						<option value="QLPW">Ultra White</option>
+					</optgroup>
+					<optgroup class="mx" label="Ventilated Leather">
+						<option value="QLEB">Black</option>
+						<option value="QLET">Tan</option>
+						<option value="QLEW">White</option>
+					</optgroup>
+					<optgroup class="ms" label="Ventilated Leather">
+						<option value="QTBS">Black</option>
+						<option value="QTWS">White</option>
 					</optgroup>
 					<optgroup class="ms-2012" label="Performance Leather">
 						<option value="IZMB">Black</option>
@@ -273,13 +277,14 @@
 			</label>
 			<label class="ms mx">Decor
 				<select id="decor">
+					<option class="ms" value="IDBA">Dark Ash Wood</option>
+					<option class="ms-2016 mx" value="IDBO">Figured Ash Wood</option>
 					<option value="IDCF">Carbon Fiber</option>
 					<option class="ms" value="IDLW">Lacewood</option>
+					<option class="ms" value="IDOK">Oak</option>
 					<option value="IDOM">Obeche Matte</option>
 					<option value="IDOG">Obeche Gloss</option>
 					<option class="ms" value="IDPB">Piano Black</option>
-					<option class="ms" value="IDBA">Dark Ash Wood</option>
-					<option class="ms-2016 mx" value="IDBO">Figured Ash Wood</option>
 				</select>
 			</label>
 			<label class="ms mx">Dash
@@ -301,19 +306,25 @@
 			<div class="release-notes">
 				Release notes
 				<ol>
+					<li>24 May 2018
+						<ul>
+							<li>S ventilated seats</li>
+							<li>S oak decor</li>
+						</ul>
+					</li>
 					<li>23 May 2018
 						<ul>
 							<li>Added release notes</li>
-							<li>Model 3 white interior</li>
-							<li>Model X gloss dash</li>
+							<li>3 white interior</li>
+							<li>X gloss dash</li>
 						</ul>
 					</li>
 					<li>21 May 2018
-							<ul>
-								<li>Model S gloss dash</li>
-							</ul>
-						</li>
-					</ol>
+						<ul>
+							<li>S gloss dash</li>
+						</ul>
+					</li>
+				</ol>
 			</div>
 		</span>
 	</form>
