Add arm rest for 5 seat model x

--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
 				<select id="seating">
 					<option value="SR07">7</option>
 					<option value="SR04">6</option>
+					<option value="SR04,YF01">6+Arm</option>
 					<option value="SR05">5</option>
 				</select>
 			</label>
@@ -306,6 +307,11 @@
 			<div class="release-notes">
 				Release notes
 				<ol>
+					<li>25 May 2018
+						<ul>
+							<li>X arm rest on 5 seat</li>
+						</ul>
+					</li>
 					<li>24 May 2018
 						<ul>
 							<li>S ventilated seats</li>
