Add Arachnid wheels for S

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 						<option class="ms-2012" value="WT19">Silver Split 5-Spoke</option>
 						<option class="ms-2012" value="WTAE">Silver Aero</option>
 						<option value="WTTB">Silver Cyclone</option>
-						<option class="ms-2012" value="WTGP">Gray Cyclone</option>
+						<option class="ms-2012" value="WTGP">Carbon Cyclone</option>
 						<option value="WTAS">Silver Slipstream</option>
-						<option class="ms-2016" value="WTDS">Gray Slipstream</option>
+						<option class="ms-2016" value="WTDS">Carbon Slipstream</option>
 					</optgroup>
 					<optgroup class="mx" label="20″">
 						<option value="WT20">Silver Slipstream</option>
@@ -122,8 +122,9 @@
 					</optgroup>
 					<optgroup class="ms" label="21″">
 						<option value="WT21">Silver Turbine</option>
-						<option value="WTSG">Gray Turbine</option>
-						<option value="WTTC">Gray Twin Turbine</option>
+						<option value="WTSG">Carbon Turbine</option>
+						<option value="WTTC">Carbon Twin Turbine</option>
+						<option value="WTAB">Black Arachnid</option>
 					</optgroup>
 					<optgroup class="mx" label="22″">
 						<option value="WT22">Silver Turbine</option>
@@ -306,6 +307,11 @@
 			<div class="release-notes">
 				Release notes
 				<ol>
+					<li>27 May 2018
+						<ul>
+							<li>S black Arachnid wheels</li>
+						</ul>
+					</li>
 					<li>24 May 2018
 						<ul>
 							<li>S ventilated seats</li>
