--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 					<optgroup class="ms" label="21″">
 						<option value="WT21">Silver Turbine</option>
 						<option value="WTSG">Carbon Turbine</option>
-						<option value="WTTC">Carbon Twin Turbine</option>
-						<option value="WTAB">Black Arachnid</option>
+						<option class="ms-2016" value="WTTC">Carbon Twin Turbine</option>
+						<option class="ms-2016" value="WTAB">Black Arachnid</option>
 					</optgroup>
 					<optgroup class="mx" label="22″">
 						<option value="WT22">Silver Turbine</option>
