--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 					<option class="ms-2016 mx" value="IDBO">Figured Ash Wood</option>
 					<option value="IDCF">Carbon Fiber</option>
 					<option class="ms" value="IDLW">Lacewood</option>
-					<option class="ms" value="IDOK">Oak</option>
+					<option class="ms-2016" value="IDOK">Oak</option>
 					<option value="IDOM">Obeche Matte</option>
 					<option value="IDOG">Obeche Gloss</option>
 					<option class="ms" value="IDPB">Piano Black</option>
