--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
 				<select id="seating">
 					<option value="SR07">7</option>
 					<option value="SR04">6</option>
+					<option value="SR04,CC12">6+Arm</option>
 					<option value="SR05">5</option>
 				</select>
 			</label>
@@ -309,7 +310,8 @@
 				<ol>
 					<li>27 May 2018
 						<ul>
-							<li>S black Arachnid wheels</li>
+							<li>S Arachnid wheels</li>
+							<li>X 6 seat + armrest</li>
 						</ul>
 					</li>
 					<li>24 May 2018
