Vent seats are 2016 S only

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 						<option value="QLET">Tan</option>
 						<option value="QLEW">White</option>
 					</optgroup>
-					<optgroup class="ms" label="Ventilated Leather">
+					<optgroup class="ms-2016" label="Ventilated Leather">
 						<option value="QTBS">Black</option>
 						<option value="QTWS">White</option>
 					</optgroup>
@@ -308,6 +308,11 @@
 			<div class="release-notes">
 				Release notes
 				<ol>
+					<li>8 June 2018
+						<ul>
+							<li>S vent seats 2016 only</li>
+						</ul>
+					</li>
 					<li>27 May 2018
 						<ul>
 							<li>S Arachnid wheels</li>
